tests/sources/invalid/arrays/array_access_undefined_index_errors.fire
// Array access where the index expression itself is undefined: only the
// "undefined variable" diagnostic should fire once (the array-access type
// check bails out silently on a None operand type instead of piling on a
// second, misleading "cannot index" error).
int32[3] arr = [1, 2, 3];
int32 v = arr[undefined_var];  //~ ERROR FS-PARSE-0003 @15
